new release + url path changed + docs upd
